--- a/views/template/common/documents.twig
+++ b/views/template/common/documents.twig
@@ -2,7 +2,7 @@
 {# Document #}
 
 {# Modal Doc #}  
-<div class="modal fade" id="docModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="docModalLabel" aria-hidden="true">
+<div class="modal modal-lg fade" id="docModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="docModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
