--- a/views/template/common/documents.twig
+++ b/views/template/common/documents.twig
@@ -43,4 +43,29 @@
     </div>
   </div>
 </div> 
+{# Modal Select Element #}
+<div class="modal modal-lg fade" id="selectElemModal" tabindex="-3" data-bs-backdrop="static" aria-labelledby="selectElemModalLabel" aria-hidden="true">
+  <div class="modal-dialog  modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Select element:</h5>
+        <button type="button" class="btn-close"  aria-label="Close" onclick="modalShow()"></button>
+      </div>
+      <div class="modal-body">          
+        <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
+          <div class="btn-group btn-group-sm" role="group">
+            <button type="submit" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="elemSelect()">
+              <i class=""></i>
+              <span>Select</span>
+            </button>    
+          </div>
+        </div> 
+        <div class="eva-table"></div>          
+      </div>
+      <div class="modal-footer">        
+        <button type="button" class="btn btn-secondary" onclick="modalShow()">{{button_close}}</button>
+      </div>
+    </div>
+  </div>
+</div> 
 {% endblock %}
