--- a/views/template/common/documents.twig
+++ b/views/template/common/documents.twig
@@ -31,7 +31,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <ul class="nav nav-tabs" id="eva-nav-tabs-elem"></ul>
+        {# <ul class="nav nav-tabs" id="eva-nav-tabs-elem"></ul> #}
         <form class="form" id="create-elem-form"> 
           {# Dynamic form #}
         </form>
