--- a/views/template/common/documents.twig
+++ b/views/template/common/documents.twig
@@ -16,7 +16,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        {# <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button> #}
+        <button type="submit" class="btn btn-primary" onclick="docSave()"><i class="fa fa-floppy-o"></i></button>
         <button type="submit" class="btn btn-primary" onclick="docCreate()">{{ button_save }}&{{button_close}}</button>        
       </div>
     </div>
@@ -37,7 +37,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        {# <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button> #}
+        <button type="submit" class="btn btn-primary" onclick="elemSave()"><i class="fa fa-floppy-o"></i></button>
         <button type="submit" class="btn btn-primary" onclick="elemCreate()">{{ button_save }}&{{button_close}}</button>        
       </div>
     </div>
