--- a/views/template/common/references.twig
+++ b/views/template/common/references.twig
@@ -36,7 +36,7 @@
 </div>  
 
 {# Modal Ref #}  
-<div class="modal fade" id="refModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="refModalLabel" aria-hidden="true">
+<div class="modal modal-lg fade" id="refModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="refModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
@@ -50,8 +50,53 @@
         </form>
       </div>
       <div class="modal-footer">
-        {# <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button> #}
+        <button type="submit" class="btn btn-primary" onclick="refSave()"><i class="fa fa-floppy-o"></i></button>
         <button type="submit" class="btn btn-primary" onclick="refCreate()">{{ button_save }}&{{button_close}}</button>        
+      </div>
+    </div>
+  </div>
+</div> 
+{# Modal Elem #}  
+<div class="modal fade" id="elemModal" tabindex="-2" data-bs-backdrop="static" aria-labelledby="elemModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="elemModalLabel"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="elementsModal=''"></button>
+      </div>
+      <div class="modal-body">
+        <form class="form" id="create-elem-form"> 
+          {# Dynamic form #}
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" onclick="elemSave()"><i class="fa fa-floppy-o"></i></button>
+        <button type="submit" class="btn btn-primary" onclick="elemCreate()">{{ button_save }}&{{button_close}}</button>        
+      </div>
+    </div>
+  </div>
+</div> 
+{# Modal Select Element #}
+<div class="modal modal-lg fade" id="selectElemModal" tabindex="-3" data-bs-backdrop="static" aria-labelledby="selectElemModalLabel" aria-hidden="true">
+  <div class="modal-dialog  modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Select element:</h5>
+        <button type="button" class="btn-close"  aria-label="Close" onclick="modalShow()"></button>
+      </div>
+      <div class="modal-body">          
+        <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">          
+          <div class="btn-group btn-group-sm" role="group">
+            <button type="submit" class="btn btn-primary d-flex gap-2 align-items-center eva-edit" onclick="elemSelect()">
+              <i class=""></i>
+              <span>Select</span>
+            </button>    
+          </div>
+        </div> 
+        <div class="eva-table"></div>          
+      </div>
+      <div class="modal-footer">        
+        <button type="button" class="btn btn-secondary" onclick="modalShow()">{{button_close}}</button>
       </div>
     </div>
   </div>
