--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -271,6 +271,15 @@
             </form>
           </div>   
           <div class="tab-pane fade" id="nav-requisite" role="tabpanel" aria-labelledby="nav-requisite-tab">
+            <label for="input-hide-id">Hide Id:</label>
+            <div class="input-group input-group-sm">
+              <input  type="checkbox" class="form-check-input" id="input-hide-id"/>
+            </div>
+            <label for="input-name-length">Name length:</label>
+            <div class="input-group input-group-sm">
+              <input type="number" placeholder="" id="input-name-length" class="form-control"/>
+            </div>
+            <br>
             <div class="btn-toolbar" role="toolbar" aria-label="toolbar group">
               <div class="btn-group btn-group-sm" role="group">
                 <button type="button" class="btn btn-primary d-flex gap-2 align-items-center" onclick="reqModal()">
