--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -465,11 +465,11 @@
                 </div>
                 <label for="input-req-length">Length:</label>
                 <div class="input-group input-group-sm">
-                  <input type="number" placeholder="" id="input-req-length" class="form-control"/>
+                  <input type="number" placeholder="0" id="input-req-length" class="form-control" max="32"/>
                 </div>
                 <label for="input-req-accuracy">Accuracy:</label>
                 <div class="input-group input-group-sm">
-                  <input type="number" placeholder="" id="input-req-accuracy" class="form-control" max="4"/>
+                  <input type="number" placeholder="0" id="input-req-accuracy" class="form-control" max="4"/>
                 </div>                     
                 <label for="input-req-pattern">Pattern:</label>
                 <div class="input-group input-group-sm">
