--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -455,7 +455,7 @@
               <div class="accordion-body"> #}
                 <label for="input-req-type">Type:</label>   
                 <div class="input-group input-group-sm">       
-                  <select class="form-select form-select-sm" id="input-req-type">              
+                  <select class="form-select form-select-sm" id="input-req-type" onchange="changeType()">              
                     <option selected value="String">String</option>                
                     <option value="Number">Number</option> 
                     <option value="Date">Date</option>   
@@ -465,11 +465,11 @@
                 </div>
                 <label for="input-req-length">Length:</label>
                 <div class="input-group input-group-sm">
-                  <input type="number" placeholder="0" id="input-req-length" class="form-control" max="32"/>
+                  <input type="number" placeholder="0" id="input-req-length" class="form-control"/>
                 </div>
                 <label for="input-req-accuracy">Accuracy:</label>
                 <div class="input-group input-group-sm">
-                  <input type="number" placeholder="0" id="input-req-accuracy" class="form-control" max="4"/>
+                  <input type="number" placeholder="0" id="input-req-accuracy" class="form-control" max="4" disabled/>
                 </div>                     
                 <label for="input-req-pattern">Pattern:</label>
                 <div class="input-group input-group-sm">
