--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -473,7 +473,7 @@
                 </div>                     
                 <label for="input-req-pattern">Pattern:</label>
                 <div class="input-group input-group-sm">
-                  <input type="text" placeholder="" id="input-req-pattern" class="form-control"/>
+                  <input type="text" placeholder="[0-9Aa-Zz]+" id="input-req-pattern" class="form-control"/>
                 </div>                   
                 <label for="input-req-valid">Validation check:</label>
                 <div class="input-group input-group-sm">
