--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -469,7 +469,7 @@
                 </div>
                 <label for="input-req-accuracy">Accuracy:</label>
                 <div class="input-group input-group-sm">
-                  <input type="number" placeholder="0" id="input-req-accuracy" class="form-control" max="4" disabled/>
+                  <input type="number" placeholder="0" id="input-req-accuracy" class="form-control" min=0 max=4 disabled/>
                 </div>                     
                 <label for="input-req-pattern">Pattern:</label>
                 <div class="input-group input-group-sm">
