--- a/views/index.twig
+++ b/views/index.twig
@@ -31,8 +31,8 @@
                             {% include "./template/common/dashboard.twig" %}
                         </div>                                                                                 
                     {% else %} {#Frontend#}                       
-                        <noscript>You need to enable JavaScript to run this app.</noscript>                    
-                        <div class="eva" id="eva-app" data-app="">{#Start app#}                           
+                        <noscript>You need to enable JavaScript to run this app.</noscript>                            
+                        <div class="eva" id="eva-app" data-app={{ app|json_encode|raw }}>{#Start app#}                           
                             {% include "./template/common/constants.twig" %} 
                             {% include "./template/common/references.twig" %}                         
                         </div>                            
