--- a/views/index.twig
+++ b/views/index.twig
@@ -32,7 +32,7 @@
                         </div>                                                                                 
                     {% else %} {#Frontend#}                       
                         <noscript>You need to enable JavaScript to run this app.</noscript>                            
-                        <div class="eva" id="eva-app" data-app={{ app|json_encode|raw }}>{#Start app#}                           
+                        <div class="eva" id="eva-app" data-app='{{ app|json_encode }}'>{#Start app#}                           
                             {% include "./template/common/constants.twig" %} 
                             {% include "./template/common/references.twig" %}                         
                         </div>                            
