--- a/views/index.twig
+++ b/views/index.twig
@@ -27,7 +27,7 @@
                         <div class="col-sm-2 sidebar" style="overflow-y: scroll">
                             {% include "./template/common/column_left.twig" %}
                         </div>
-                        <div class="col">
+                        <div class="col" id="dashboard" data-dashboard ='{{ dashboard|json_encode }}'>
                             {% include "./template/common/dashboard.twig" %}
                         </div>                                                                                 
                     {% else %} {#Frontend#}                       
