--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -109,23 +109,23 @@
             <input type="text" id="input-role" class="form-control" required/>
             <button class="btn btn-outline-secondary" type="button" onclick="userEditRole()">...</button>
           </div>
-          <label for="input-email">{{ dashboard.email }}</label>
+          <label for="input-email">{{ dashboard.text_email }}</label>
           <div class="input-group input-group-sm">            
             <input type="email" placeholder="email@example.com" id="input-email" class="form-control"/>
           </div>
-          <label for="input-password">{{ dashboard.password }}</label>
+          <label for="input-password">{{ dashboard.text_password }}</label>
           <div class="input-group input-group-sm">
             <input type="password" placeholder="Password" id="input-password" class="form-control"/>
           </div>
-          <label for="input-confirmpass">{{ dashboard.confirmpass }}</label>
+          <label for="input-confirmpass">{{ dashboard.text_confirmpass }}</label>
           <div class="input-group input-group-sm">
             <input type="password" placeholder="Password" id="input-confirmpass" class="form-control"/>
           </div>
-          <label for="input-show">{{ dashboard.show }}</label>
+          <label for="input-show">{{ dashboard.text_show }}</label>
           <div class="form-group input-group-sm">
             <input type="checkbox" class="form-check-input" id="input-show" checked/>
           </div>
-          <label for="input-eauth">{{ dashboard.eauth }}</label>
+          <label for="input-eauth">{{ dashboard.text_eauth }}</label>
           <div class="form-group input-group-sm">
             <input type="checkbox" class="form-check-input" id="input-eauth" checked/>
           </div>
