--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -166,12 +166,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="roleModalLabel">{{ text_add_role }}</h5>
+        <h5 class="modal-title" id="roleModalLabel">{{ dashboard.text_add_role }}</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
       </div>
       <div class="modal-body">
         <form class="form" id="create-role-form">
-          <label for="input-rolename">{{ text_name}}</label>
+          <label for="input-rolename">{{ dashboard.text_name}}</label>
           <div class="input-group input-group-sm">
             <input type="text" placeholder="Name" id="input-rolename" class="form-control" required/>
           </div>                  
