--- a/views/template/common/dashboard.twig
+++ b/views/template/common/dashboard.twig
@@ -233,7 +233,7 @@
               <div class="input-group input-group-sm has-validation">
                 <input type="text" placeholder="[a-zA-Z0-9]" id="input-textId" class="form-control" required pattern="[a-zA-Z0-9]+"/>
               </div>  
-              <label for="input-const-type" hidden>{{ dashboard.text_type }}:</label>
+              <label for="input-const-type" hidden>{{ dashboard.text_object_type }}:</label>
               <div class="input-group input-group-sm">
                 <select class="form-select form-select-sm" id="input-const-type" required pattern="[a-zA-Z]+" hidden>
                   <option value="String" selected>String</option>
